# rapp-api

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
cpp/: .travis.yml  CMakeLists.txt  CMakeLists.txt.broken  DOCUMENTATION.md  README.md  TODO  TODO.md  rapp  rapp-config.cmake
cpp/cmake/: RappConfig.cmake.in  RappConfigVersion.cmake.in  RappMacros.cmake  rapp-config.cmake
cpp/examples/: asio_tls.cpp  available_services.cpp  batch.cpp  class_reactor.cpp  cognitive_example.cpp  cognitive_games.cpp  config.cpp  email_example.cpp  email_handling.cpp  face_detect.cpp  fetch_data.cpp  geolocation.cpp  hazard_detect.cpp  human_detect.cpp  knowrob_ontology.cpp  light_detection.cpp  loop.cpp  news.cpp  object_recognition.cpp  object_recognition_my_own_models.cpp  ontology_example.cpp  path_planner.cpp  path_planning.cpp  picture_example.cpp  picture_handling.cpp  planned_path.json  qr_detect.cpp  qr_recognition.cpp  service_example1.cpp  set_denoise_example.cpp  set_denoise_profile.cpp  set_noise_profile.cpp  speech_detection_google.cpp  speech_detection_sphinx.cpp  speech_recognition_google.cpp  speech_recognition_sphinx4.cpp  speech_to_text.cpp  text_to_speech.cpp  weather.cpp
cpp/includes/: CMakeLists.txt  TODO  cloud_basic.hpp  cloud_core.hpp  cloud_extra.hpp  objects.hpp  rapp.hpp
cpp/includes/cloud/: CMakeLists.txt  TODO.md
cpp/includes/cloud/asio/: CMakeLists.txt  asio_handler.cpp  asio_handler.hpp  asio_handler.impl  asio_http.cpp  asio_http.hpp  asio_https.cpp  asio_https.hpp  asio_socket.hpp  asio_timer.cpp  asio_timer.hpp  caller.hpp  http_header.cpp  http_header.hpp  http_post.cpp  http_post.hpp  http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp  includes.ihh  json_parser.hpp  platform.hpp  platform_info.hpp  request.hpp  response.hpp  timer.hpp
cpp/includes/cloud/asio_handler/: asio_handler.cpp  asio_handler.hpp  includes.ihh
cpp/includes/cloud/asio_helper/: asio_helper.hpp  includes.ihh
cpp/includes/cloud/asio_service_http/: asio_service_http.cpp  asio_service_http.hpp  includes.ihh
cpp/includes/cloud/asio_socket/: asio_socket.hpp
cpp/includes/cloud/asio_socket_https/: asio_socket_https.cpp  asio_socket_https.hpp  includes.ihh
cpp/includes/cloud/available_services/: available_services.cpp  available_services.hpp  includes.ihh
cpp/includes/cloud/cognitive_exercises/: cognitive_exercises.cpp  cognitive_exercises.hpp  includes.ihh
cpp/includes/cloud/cognitive_test_chooser/: congitive_test_chooser.hpp
cpp/includes/cloud/denoise_profile/: denoise_profile.hpp
cpp/includes/cloud/email/: email.cpp  email.hpp  includes.ihh
cpp/includes/cloud/faceDetector/: Includes.ihh  faceDetector.cpp  faceDetector.hpp
cpp/includes/cloud/face_detection/: face_detection.hpp  includes.ihh
cpp/includes/cloud/face_detector/: face_detector.hpp  includes.ihh
cpp/includes/cloud/fetchPersonalData/: Includes.ihh  fetchPersonalData.hpp
cpp/includes/cloud/fetch_personal_data/: fetch_personal_data.hpp  includes.ihh
cpp/includes/cloud/geolocation/: geolocation.cpp  geolocation.hpp  includes.ihh
cpp/includes/cloud/hazard_detection/: hazard_detection.hpp  includes.ihh
cpp/includes/cloud/human_detection/: human_detection.hpp
cpp/includes/cloud/navigation/: CMakeLists.txt
cpp/includes/cloud/news/: includes.ihh  news.hpp
cpp/includes/cloud/objectDetector/: Includes.ihh  objectDetector.hpp
cpp/includes/cloud/object_recognition/: object_recognition.hpp
cpp/includes/cloud/ontology/: includes.ihh  ontology.cpp  ontology.hpp
cpp/includes/cloud/ontologyIsSubSuperClassOf/: ontologyIsSubSuperClassOf.hpp
cpp/includes/cloud/ontologySubClassesOf/: ontologySubClassesOf.hpp
cpp/includes/cloud/ontologySubclassOf/: Includes.ihh  ontologySubclassOf.hpp
cpp/includes/cloud/ontologySuperClassesOf/: Includes.ihh  ontologySuperClassesOf.hpp
cpp/includes/cloud/ontologySuperclassesOf/: ontologySuperclassesOf.hpp
cpp/includes/cloud/ontology_is_subsuperclass_of/: ontology_is_subsuperclass_of.hpp
cpp/includes/cloud/qrDetector/: Includes.ihh  (+2 more)
cpp/includes/config/: config.cpp  config.hpp  includes.ihh
cpp/includes/misc/: includes.ihh  json_parser.hpp  json_parser_write.hpp  misc.hpp  utils.hpp
cpp/includes/objects/: CMakeLists.txt  globals.hpp
cpp/includes/robot/: CMakeLists.txt
cpp/includes/service/: CMakeLists.txt
cpp/rapp/: CMakeLists.txt
cpp/rapp/cloud/: CMakeLists.txt  authentication.cpp  authentication.hpp  available_services.cpp  available_services.hpp  cognitive_exercises.cpp  cognitive_exercises.hpp  email.hpp  geolocation.cpp  geolocation.hpp  includes.ihh  news.cpp  news.hpp  ontology.cpp  ontology.hpp  path_planning.cpp  path_planning.hpp  service_controller.cpp  service_controller.hpp  service_controller.impl  set_noise_profile.hpp  speech_recognition.cpp  speech_recognition.hpp  speech_recognition_google.cpp  speech_recognition_google.hpp  speech_recognition_sphinx4.hpp  text_to_speech.hpp  vision_detection.cpp  vision_detection.hpp  vision_recognition.cpp  vision_recognition.hpp  weather_report.cpp  weather_report.hpp
cpp/rapp/config/: includes.ihh
cpp/rapp/misc/: includes.ihh  misc.hpp
cpp/rapp/objects/: audio.hpp  face.hpp  globals.hpp  human.hpp  includes.ihh  msg_metadata.hpp  picture.cpp  picture.hpp  planned_path.cpp  planned_path.hpp  point.cpp  point.hpp  pose.cpp  pose.hpp  pose_stamped.cpp  pose_stamped.hpp  qr_code.hpp  quaternion.cpp  quaternion.hpp  yaml.hpp
cpp/src/service/: CMakeLists.txt
cpp/tests/: JSON_time.txt  TODO  TODO.md  asio_classes.cpp  async_client.cpp  cloud_calls.cpp  cloud_test.cpp  face_class.json  face_detect.cpp  fetch_data.cpp  json_classes.cpp  msg_metadata_class.json  object_classes.cpp  object_detect.cpp  object_test.cpp  ontology_test.cpp  pose_stamped.json  qr_detect.cpp  quaternion_class.json  serialise.cpp  service_test.cpp  time_class.json  unit_cloud.cpp
cpp/tests/data/: json_classes_human.json  json_classes_planned_path.json  json_classes_point.json  json_classes_pose.json  json_classes_pose_stamped.json  object_classes_map_1.yaml  token
(+480 files in other folders)
