cmake_minimum_required(VERSION 2.8)

add_subdirectory(available_services)
add_subdirectory(cognitive_test_choser)
add_subdirectory(face_detection)
add_subdirectory(fetch_personal_data)
add_subdirectory(ontology_is_subsuperclass_of)
add_subdirectory(ontology_subclasses_of)
add_subdirectory(ontology_superclasses_of)
add_subdirectory(qr_detection)
add_subdirectory(record_cognitive_test_performance)
add_subdirectory(set_denoise_profile)
add_subdirectory(speech_detection_google)
add_subdirectory(speech_detection_sphinx4)
add_subdirectory(text_to_speech)
