cmake_minimum_required(VERSION 2.8)
add_subdirectory(asio_handler)
add_subdirectory(asio_service_http)
add_subdirectory(asio_socket)
add_subdirectory(asio_socket_https)
add_subdirectory(service_controller)

add_subdirectory(available_services)
add_subdirectory(fetch_personal_data)

add_subdirectory(ontology)
add_subdirectory(speech)
add_subdirectory(vision)
add_subdirectory(navigation)

add_subdirectory(cognitive_exercises)
add_subdirectory(email)
add_subdirectory(geolocation)
add_subdirectory(news)
add_subdirectory(weather_report)
